# racing-league

./: .graphqlrc.json  Cargo.toml  Justfile  test.json
backend/: .env  .gitignore  Cargo.toml  Justfile  docker-compose.yml
backend/config/: local.yml  production.yml
backend/migrations/: 20230825083540_schema.sql  20230825083540_types.sql  20230827145820_schema.sql
backend/src/: auth.rs  config.rs  lib.rs  main.rs
backend/src/filestore/: mod.rs
backend/src/queries/: mod.rs
backend/src/schema/: data.rs  mod.rs  mutation.rs  query.rs
backend/src/schema/data/: entries.json  events.json  league_entries.json  leagues.json  sessions.json  teams.json  tracks.json  users.json
frontend/: .eslintignore  houdini.config.js  package.json  pnpm-lock.yaml  schema.graphql  tailwind.config.js  tsconfig.json
frontend/src/: client.ts  config.ts  hooks.server.ts
frontend/src/lib/: Flag.svelte  Session.gql  Session.svelte  Tyres.svelte  VerticalTab.svelte  countryCodes.ts
frontend/src/lib/server/: profilePicture.ts
frontend/src/routes/: +error.svelte  +layout.gql  +layout.svelte  +page.gql  +page.svelte
frontend/src/routes/(logged_in)/: +layout.gql  +layout.server.ts  +layout.ts
frontend/src/routes/(logged_in)/new-user/: +page.server.ts  +page.svelte  +page.ts
frontend/src/routes/(logged_in)/profile/: +page.svelte
frontend/src/routes/(logged_in)/profile/edit/: +page.server.ts  +page.svelte
frontend/src/routes/health_check/: +page.svelte  +page.ts
frontend/src/routes/league/[id]/: +page.gql  +page.svelte
frontend/src/routes/league/[league_id]/: +layout.gql  +layout.svelte  +page.gql  +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/me/: +page.gql  +page.svelte
frontend/src/routes/new-user/: +page.gql  +page.server.ts  +page.ts
frontend/src/routes/profile/: +page.svelte
frontend/src/routes/profile/edit/: +page.gql  +page.server.ts
frontend/src/routes/session/[session_id]/: +page.gql  +page.svelte
telemetry/: Cargo.toml
telemetry-cli/: Cargo.toml
telemetry-cli/src/: lib.rs
telemetry/src/: f1_23.rs  lib.rs
telemetry/src/f1_23/: car_status.rs  car_telemetry.rs  event.rs  final_classification.rs  header.rs  lap_data.rs  lobby_info.rs  motion.rs  participants.rs  session.rs  session_history.rs
telemetry/src/packet/: car_status.rs  car_telemetry.rs  event.rs  final_classification.rs  header.rs  lap_data.rs  lobby_info.rs  mod.rs  motion.rs  participants.rs  session.rs  session_history.rs
telemetry/src/twentyone/: car_status.rs  car_telemetry.rs  event.rs  header.rs  lap_data.rs  mod.rs  participants.rs  session.rs
telemetry/src/twentythree/: car_status.rs  car_telemetry.rs  final_classification.rs  header.rs  lap_data.rs  lobby_info.rs  mod.rs  participants.rs  session_history.rs
telemetry/src/twentytwo/: car_status.rs  event.rs  final_classification.rs  header.rs  lap_data.rs  lobby_info.rs  mod.rs  motion.rs  participants.rs  session.rs  session_history.rs
website/: .eslintrc.cjs  Justfile  drizzle.config.ts  drizzle.db  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
website/drizzle/: 0000_careless_roughhouse.sql  0000_kind_peter_quill.sql  0000_neat_iron_patriot.sql  0000_safe_phantom_reporter.sql  0001_square_vance_astro.sql  0002_serious_luckman.sql  0003_jazzy_excalibur.sql  0004_pink_kree.sql  0005_left_micromax.sql
website/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  0005_snapshot.json  _journal.json
website/src/: app.d.ts  app.pcss  hooks.server.ts
website/src/lib/: util.ts
website/src/lib/component/: CountryPicker.svelte  Crud.svelte
website/src/lib/components/: date-picker.svelte  reorder-list.svelte
website/src/lib/flags/: Flag.svelte  countryCodes.ts
website/src/lib/icons/: CheckeredFlag.svelte  GoogleOauthPill.svelte
website/src/lib/server/: lucia.ts  oauth.ts
website/src/lib/server/db/: db.ts  schema.ts
website/src/routes/: +layout.svelte  +page.svelte
website/src/routes/admin/: +layout.svelte
website/src/routes/admin/drivers/[[id]]/: +page.server.ts  +page.svelte  drivers-form.svelte  schema.ts
website/src/routes/admin/events/[id]/: +page.server.ts  +page.svelte  schema.ts
website/src/routes/admin/games/[[id]]/: +page.server.ts  +page.svelte  games-form.svelte  schema.ts
website/src/routes/admin/leagues/: +page.server.ts  +page.svelte  league-form.svelte  schema.ts
website/src/routes/admin/leagues/[id]/: +page.server.ts  +page.svelte  schema.ts
website/src/routes/admin/sessions/[id]/: +page.server.ts  +page.svelte  schema.ts
website/src/routes/admin/teams/[[id]]/: +page.server.ts  +page.svelte  teams-form.svelte
website/src/routes/auth/: +page.server.ts
website/src/routes/auth/callback/: +server.ts
website/src/routes/auth/signin/: +page.server.ts  +page.svelte
website/src/routes/auth/signup/: +page.server.ts  +page.svelte
website/src/routes/protected/: +layout.server.ts
website/src/routes/testflags/: +page.svelte
(+12 files in other folders)
