[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "6.0.1", features = ["uuid", "chrono", "apollo_tracing"] }
async-graphql-axum = "6.0.1"
axum = { version = "0.6.19", features = ["tracing"] }
chrono = "0.4.26"
color-eyre = "0.6.2"
config = "0.13.3"
derive_more = "0.99.17"
http = "0.2.9"
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.105"
serde_with = { version = "3.2.0", features = ["chrono"] }
tokio = { version = "1.29.1", features = ["full", "tracing"] }
tower-http = { version = "0.4.3", features = ["trace", "cors"] }
tower-request-id = "0.2.1"
tracing = { version = "0.1.37", features = ["async-await", "log"] }
tracing-log = "0.1.3"
tracing-subscriber = "0.3.17"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
