[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
argon2 = "0.5.1"
async-graphql = { version = "6.0", features = [
    "uuid",
    "chrono",
    "apollo_tracing",
] }
async-graphql-axum = "6.0"
axum = { version = "0.6", features = ["tracing", "multipart"] }
axum-macros = "0.3.8"
axum_typed_multipart = "0.8"
bytes = "1.4"
cache_control = "0.2.0"
chrono = { version = "0.4", features = ["serde"] }
color-eyre = "0.6"
config = "0.13"
dotenv = "0.15"
futures = "0.3"
hex = "0.4"
http = "0.2"
human_bytes = { version = "0.4", features = ["fast"] }
image = { version = "0.24", features = ["webp-encoder"] }
jsonwebtoken = "8.3"
kv = "0.24"
mime_guess = "2.0.4"
reqwest = { version = "0.11.20", features = ["json"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"
sqlx = { version = "0.7", features = [
    "chrono",
    "postgres",
    "tls-rustls",
    "runtime-tokio",
    "runtime-tokio-rustls",
    "uuid",
] }
tokio = { version = "1.29", features = ["full", "tracing"] }
tower = "0.4.13"
tower-http = { version = "0.4", features = ["trace", "cors", "fs", "compression-br", "compression-deflate", "compression-gzip", "compression-zstd", "auth"] }
tower-request-id = "0.2"
tracing = { version = "0.1", features = ["async-await", "log"] }
tracing-log = "0.1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
url = "2.4"
uuid = { version = "1.4", features = ["v4", "serde"] }

[profile.dev.package.backtrace]
opt-level = 3
