[package]
name = "telemetry-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[[bin]]
name = "cli"

[dependencies]
anyhow = "1.0.76"
bytes = "1.5.0"
celes = "2.4.0"
clap = { version = "4.4.11", features = ["derive"] }
color-eyre = "0.6.2"
eyre = "0.6.11"
itertools = "0.12.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
telemetry = { version = "0.1.0", path = "../telemetry" }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
