[package]
name = "telemetry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
celes = "2.4.0"
derive_more = "0.99.17"
serde = { version = "1.0.193", features = ["derive"] }
thiserror = "1.0.51"
